force-app/main/default/objects/AHIS_Config__mdt/AHIS_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Agentic Health Intelligence Surface (AHIS) component</description>
    <label>AHIS Config</label>
    <pluralLabel>AHIS Configs</pluralLabel>
</CustomObject>