force-app/main/default/objects/AHIS_Config__mdt/fields/Cache_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cache_Duration_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <description>How long to cache AI-generated summaries (in minutes)</description>
    <label>Cache Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>