force-app/main/default/objects/AHIS_Config__mdt/fields/Enable_Change_Detection__c.field-meta.xml
<CustomField>
    <fullName>Enable_Change_Detection__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Change Detection feature</description>
    <label>Enable Change Detection</label>
    <type>Checkbox</type>
</CustomField>