force-app/main/default/objects/AHIS_Config__mdt/fields/Enable_Risk_Synthesis__c.field-meta.xml
<CustomField>
    <fullName>Enable_Risk_Synthesis__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Risk Synthesis feature</description>
    <label>Enable Risk Synthesis</label>
    <type>Checkbox</type>
</CustomField>