force-app/main/default/objects/AHIS_Config__mdt/fields/Enable_Suggested_Actions__c.field-meta.xml
<CustomField>
    <fullName>Enable_Suggested_Actions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Suggested Actions feature</description>
    <label>Enable Suggested Actions</label>
    <type>Checkbox</type>
</CustomField>