force-app/main/default/objects/AHIS_Config__mdt/fields/Max_Related_Entities__c.field-meta.xml
<CustomField>
    <fullName>Max_Related_Entities__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of related entities to include in context</description>
    <label>Max Related Entities</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>