force-app/main/default/objects/AHIS_Config__mdt/fields/OpenAI_API_Key__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_API_Key__c</fullName>
    <description>OpenAI API Key for GenAI summaries. Store your sk-... key here.</description>
    <label>OpenAI API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>