force-app/main/default/objects/AHIS_Config__mdt/fields/OpenAI_Model__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Model__c</fullName>
    <defaultValue>&quot;gpt-4o-mini&quot;</defaultValue>
    <description>OpenAI model to use for summary generation</description>
    <label>OpenAI Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>