force-app/main/default/objects/AHIS_Config__mdt/fields/Whitelisted_Objects__c.field-meta.xml
<CustomField>
    <fullName>Whitelisted_Objects__c</fullName>
    <description>Comma-separated list of object API names that AHIS can summarize</description>
    <label>Whitelisted Objects</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>